CSS fix for long words stretching the width of the feed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -204,6 +204,7 @@ input, textarea, select, .uneditable-input {
   li {
     padding: 10px 0;
     border-top: 1px solid #e8e8e8;
+    word-wrap: break-word;
   }
 }
 .content {
